[package]
name = "dolly"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Composable camera rigs"
repository = "https://github.com/h3r2tic/dolly"
documentation = "https://docs.rs/dolly"
keywords = ["gamedev", "camera", "3d"]
categories = ["game-development"]
readme = "crates-io.md"
rust-version = "1.68.2"

[dependencies]
glam = { version = ">=0.21, <=0.29", features = ["mint"] }
mint = "0.5"
bevy_math = { version = "0.15.0", optional = true }
bevy_transform = { version = "0.15.0", optional = true }

[features]
bevy = ["bevy_math", "bevy_transform"]

[dev-dependencies]
macroquad = "0.4"
